2007-07-15  Wakaba  <wakaba@suika.fam.cx>

	* AtomElement.pm: Wrong module was loaded.
	(AUTOLOAD): No warnings!  Some argument index were incorrect.
	Some variables were not referenced correctly.
	(AtomDateConstruct): Package name was incorrect.

2007-07-15  Wakaba  <wakaba@suika.fam.cx>

	* AtomElement.pm: New module.

2007-07-15  Wakaba  <wakaba@suika.fam.cx>

	* ChangeLog: New file.

