@@ -1,3 +1,7 @@
+2007-10-08  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTMLElement.pm (href): Implemented.
+
 2007-07-29  Wakaba  <wakaba@suika.fam.cx>
 
 	* ChangeLog: New file.
