@@ -1,3 +1,8 @@
+2007-10-08  Wakaba  <wakaba@suika.fam.cx>
+
+	* AtomElement.pm (get_entry_element_by_id): Support
+	for |create-child-element| option.
+
 2007-07-15  Wakaba  <wakaba@suika.fam.cx>
 
 	* AtomElement.pm: Wrong module was loaded.
